# twin

./: .gitignore
.github/workflows/: deploy.yml
backend/: .env.example  README.md  deploy.py  langchain_rag.py  me.txt  pyproject.toml  rag.py  requirements.txt  server.py  start.sh
backend/data/: facts.json  style.txt
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: twin.tsx
memory/: 2cf20864-b6e9-4bbd-9c50-00655df34514.json  74a38712-9784-4c9a-b935-3a5fe87922a6.json  96d82a10-8667-409e-ac8c-230e90a0dc32.json  d59cea8a-d9fc-43b0-aa24-ca1c3126875b.json  eb445e04-57c8-4bb0-85ff-93fb01f23450.json
scripts/: deploy.sh  destroy.sh
scripts/crawler/: config.json  main.py  requirements.txt
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
