[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.5",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "lxml>=6.1.0",
    "mangum>=0.21.0",
    "matplotlib>=3.10.9",
    "openai>=2.35.1",
    "pandas>=3.0.2",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
    "yfinance>=1.3.0",
]
